--- a/Recity/Controllers/WeaterViewController/RCValutaViewController.storyboard
+++ b/Recity/Controllers/WeaterViewController/RCValutaViewController.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="HTK-Ja-OTK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="cuM-bz-yYb">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,24 +9,56 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Valuta View Controller-->
-        <scene sceneID="RFr-Im-Q62">
+        <!--Navigation Controller-->
+        <scene sceneID="ckA-L6-jBQ">
             <objects>
-                <viewController storyboardIdentifier="RCWeaterViewController" id="HTK-Ja-OTK" customClass="RCValutaViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="IBN-VD-hY6"/>
-                        <viewControllerLayoutGuide type="bottom" id="8wB-9G-mxD"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="XD1-Wp-yey">
+                <navigationController id="cuM-bz-yYb" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="QGo-kY-pT7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="1mL-jB-rTq" kind="relationship" relationship="rootViewController" id="Vzx-d7-p3P"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8WB-tw-Xan" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-569" y="-107"/>
+        </scene>
+        <!--Idamob-->
+        <scene sceneID="rb1-v5-B1Y">
+            <objects>
+                <tableViewController id="1mL-jB-rTq" customClass="RCValutaViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="8K9-os-s1b">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="ibw-Kt-n4c"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Hf6-Oj-ReW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="fZk-VX-MK1">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fZk-VX-MK1" id="33B-gU-B7f">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="1mL-jB-rTq" id="3tK-r1-xcj"/>
+                            <outlet property="delegate" destination="1mL-jB-rTq" id="Lkf-bD-ouE"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Idamob" id="HTV-bi-6er"/>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="DaD-L6-erB">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <connections>
+                            <action selector="refreshAction:" destination="1mL-jB-rTq" eventType="valueChanged" id="bup-N3-Ela"/>
+                        </connections>
+                    </refreshControl>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ex5-WJ-Vhd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-319.19999999999999" y="-107.49625187406298"/>
+            <point key="canvasLocation" x="351" y="-107"/>
         </scene>
     </scenes>
 </document>
